--- a/sess_admin_portal/templates/sess_admin_portal/settings.html
+++ b/sess_admin_portal/templates/sess_admin_portal/settings.html
@@ -43,7 +43,7 @@
                         <h5 class="mb-0">Change Password</h5>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'settings' %}">
+                        <form method="post" action="{% url 'user-settings' %}">
                             {% csrf_token %}
                             <input type="hidden" name="change_password" value="1">
                             
@@ -80,7 +80,7 @@
                         <h5 class="mb-0">Notification Preferences</h5>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'settings' %}">
+                        <form method="post" action="{% url 'user-settings' %}">
                             {% csrf_token %}
                             <input type="hidden" name="notification_settings" value="1">
                             
@@ -123,7 +123,7 @@
                         <h5 class="mb-0">App Settings</h5>
                     </div>
                     <div class="card-body">
-                        <form method="post" action="{% url 'settings' %}">
+                        <form method="post" action="{% url 'user-settings' %}">
                             {% csrf_token %}
                             <input type="hidden" name="app_settings" value="1">
                             
